--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "nodejs app",
     "main": "src/index.ts",
     "scripts": {
+        "db:seed": "ts-node-dev src/adapters/orm/seeding/seeds/initialSeed.ts",
         "migration:generate": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:generate -d src/conf/dataSource.ts",
         "migration:run": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run -d src/conf/dataSource.ts",
         "clean": "rimraf dist/*",
@@ -29,18 +30,21 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.2",
+        "faker": "^5.5.3",
         "jsonwebtoken": "^8.5.1",
         "sqlite3": "^5.0.8",
         "typeorm": "^0.3.7",
+        "typeorm-seeding": "^1.6.1",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
+        "@types/faker": "^6.6.9",
         "@types/fs-extra": "^9.0.13",
         "@types/jest": "^27.4.0",
-        "@types/node": "^16.11.25",
+        "@types/node": "^16.11.45",
         "@types/shelljs": "^0.8.11",
         "@types/sqlite3": "^3.1.8",
         "@types/uuid": "^8.3.4",
