--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/bcrypt": "^5.0.0",
         "@types/bcryptjs": "^2.4.2",
         "@types/jsonwebtoken": "^8.5.8",
+        "@types/underscore": "^1.11.4",
         "@typescript-eslint/eslint-plugin-tslint": "^5.30.6",
         "ajv": "^8.11.0",
         "bcrypt": "^5.0.1",
@@ -35,6 +36,7 @@
         "sqlite3": "^5.0.8",
         "typeorm": "^0.3.7",
         "typeorm-seeding": "^1.6.1",
+        "underscore": "^1.13.4",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
@@ -43,7 +45,8 @@
         "@types/express": "^4.17.13",
         "@types/faker": "^6.6.9",
         "@types/fs-extra": "^9.0.13",
-        "@types/jest": "^27.4.0",
+        "@types/jest": "^27.5.2",
+        "@types/mocha": "^9.1.1",
         "@types/node": "^16.11.45",
         "@types/shelljs": "^0.8.11",
         "@types/sqlite3": "^3.1.8",
@@ -54,7 +57,7 @@
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2",
         "shelljs": "^0.8.5",
-        "ts-jest": "^27.1.3",
+        "ts-jest": "^27.1.5",
         "ts-node": "^10.8.2",
         "ts-node-dev": "^2.0.0",
         "tslint": "^6.1.3",
